buildscript {
    repositories {

        mavenCentral()
        maven { url 'https://maven.fabric.io/public' }
    }

    dependencies {
        classpath 'io.fabric.tools:gradle:1.25.3'
    }
}
apply plugin: 'com.android.application'
apply plugin: 'io.fabric'

repositories {
    maven { url 'https://maven.fabric.io/public' }
}

apply plugin: 'realm-android'

android {
    compileSdkVersion 27
    buildToolsVersion '27.0.3'

    defaultConfig {
        applicationId "net.iGap"
        minSdkVersion 15
        targetSdkVersion 27
        versionCode 76
        versionName "0.9.2"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true

        ndk {
            abiFilters "armeabi-v7a", "x86"
        }
        javaCompileOptions {

            annotationProcessorOptions {
                includeCompileClasspath true
            }
        }
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }

    dataBinding {
        enabled = true
    }

    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
        disable 'MissingTranslation'
    }

    dexOptions {
        javaMaxHeapSize "4g"
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation project(':libwebrtc')
    implementation('com.afollestad.material-dialogs:core:0.9.6.0') {
        transitive = true
    }
    implementation('com.crashlytics.sdk.android:crashlytics:2.9.3@aar') {
        transitive = true
    }
    implementation project(path: ':lvl')
    implementation 'com.mikepenz:fastadapter:3.2.5'
    implementation 'com.mikepenz:fastadapter-commons:3.2.5'
    implementation 'com.mikepenz:fastadapter-extensions-expandable:3.2.5'
    implementation 'com.mikepenz:fastadapter-extensions:3.2.5'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation 'com.nineoldandroids:library:2.4.0'
    implementation 'com.android.support:recyclerview-v7:27.1.1'
    implementation 'com.android.support:design:27.1.1'
    implementation 'com.vicmikhailau:MaskedEditText:1.1.1'
    implementation 'com.uncopt:android.justified:1.0'
    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
    implementation 'com.android.support:percent:27.1.1'
    implementation 'com.timehop.stickyheadersrecyclerview:library:0.4.3@aar'
    implementation 'com.android.support:cardview-v7:27.1.1'
    implementation 'com.larswerkman:HoloColorPicker:1.5'
    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
    implementation 'me.leolin:ShortcutBadger:1.1.18@aar'
    implementation 'com.android.support:support-v4:27.1.1'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'dk.ilios:realmfieldnameshelper:1.1.1'
    implementation 'com.hanks.animatecheckbox:library:0.1'
    implementation 'org.parceler:parceler-api:1.1.9'
    implementation 'com.android.support:gridlayout-v7:27.1.1'
    implementation 'com.google.zxing:core:3.3.0'
    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
    implementation 'com.google.android.gms:play-services-analytics:16.0.0'
    implementation 'com.google.android.gms:play-services-maps:15.0.1'
    implementation 'me.zhanghai.android.customtabshelper:library:1.0.3'
    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.4'
    implementation 'cat.ereza:customactivityoncrash:2.1.0'
    implementation 'com.github.RooyeKhat-Media.Emoji:emoji-one:0.5.1.Fix2b'
    implementation 'io.realm:android-adapters:3.0.0'
    implementation 'org.osmdroid:osmdroid-android:5.6.5'
    implementation 'io.fotoapparat.fotoapparat:library:1.3.0'
    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
    implementation 'com.github.pchmn:MaterialChipsInput:1.0.8'
    testImplementation 'junit:junit:4.12'
    annotationProcessor 'org.parceler:parceler:1.1.6'
    compileOnly 'com.android.support:support-annotations:27.1.1'
    implementation group: 'com.github.msarhan', name: 'ummalqura-calendar', version: '1.1.7'
    implementation 'com.sothree.slidinguppanel:library:3.4.0'
    implementation 'com.github.krokyze:ucropnedit:2.2.2'
    implementation 'info.androidhive:imagefilters:1.0.7'
    implementation 'com.mindorks.android:prdownloader:0.4.0'
    implementation 'com.google.firebase:firebase-core:16.0.0'
    implementation 'com.google.firebase:firebase-messaging:17.0.0'
    implementation('com.github.RooyeKhat-Media:Compress:1.0.0') {
        exclude group: 'com.googlecode.mp4parser', module: 'isoparser'
    }
    implementation('com.github.RooyeKhat-Media:VideoTrimmer:1.1.0') {
        exclude group: 'com.googlecode.mp4parser', module: 'isoparser'
    }
    implementation 'com.github.RooyeKhat-Media:Websocket:1.0.0'
    implementation 'com.github.RooyeKhat-Media:MessageProgress:1.0.0'
    implementation 'com.github.RooyeKhat-Media:Proto:Build91'
    implementation project(':pecpayment-release')
    implementation project(':raadcore')
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    implementation 'com.mcxiaoke.volley:library:1.0.19'
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
    implementation project(':paygear_wallet')
}

configurations.all {
    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
        def requested = details.requested
        if (requested.group == 'com.android.support') {
            if (!requested.name.startsWith("multidex")) {
                details.useVersion '27.1.1'
            }
        }
    }
}

apply plugin: 'com.google.gms.google-services'
